[tool.poetry]
name = "miniddpm"
version = "0.1.0"
description = ""
authors = ["HirotoOsaka <ipocchi129@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
torch = "^2.3.0"
torchvision = "^0.18.0"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
sympy = "^1.12"
wandb = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
